--- a/build.gradle
+++ b/build.gradle
@@ -10,12 +10,12 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.3'
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.11.3'
+    implementation 'org.junit.jupiter:junit-jupiter-api:5.11.3'
+    implementation 'org.junit.jupiter:junit-jupiter-engine:5.11.3'
 
-    testImplementation 'io.rest-assured:rest-assured:5.5.0'
-    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.18.1'
-    testImplementation 'org.assertj:assertj-core:3.26.3'
+    implementation 'io.rest-assured:rest-assured:5.5.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.1'
+    implementation 'org.assertj:assertj-core:3.26.3'
 }
 
 test {
